@@ -704,7 +704,7 @@ The default is \fBfalse\fR.
 .TP
 \fB\-\-ost\fR=\fIvalue\fR
 Specify script of glyph substitution.
-The default is \fBflatn\fR.
+The default is \fBlatn\fR.
 .TP
 \fB\-\-otl\fR(=\fIbool\fR)
 Whether to show substituting glyphs in open type fonts with the use of libotf or harfbuzz.
